[project]
name = "port-tunnel-common"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "port-tunnel-protocol",
]

[tool.uv.sources]
port-tunnel-protocol = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
